--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,13 +7,12 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo running ls command
-      - ls
+      - echo dev instance ob buildspec
       - npm run build
   post_build:
     on-failure: CONTINUE
     commands:
-      - aws s3 cp --recursive --acl public-read ./build s3://tracker-app-deploybucket-t9ahz4q34h6f/
+      - aws s3 cp --recursive --acl public-read ./build s3://tracker-app-dev-deploybucket-1pi4x0zmx4fut/
       #uncomment if you have service-worker.js 
       #- aws s3 cp --acl public-read --cache-control="max-age=0, no-cache, no-store, must-revalidate" ./build/service-worker.js s3://tracker-app-deploybucket-t9ahz4q34h6f/
       - aws s3 cp --acl public-read --cache-control="max-age=0, no-cache, no-store, must-revalidate" ./build/index.html s3://tracker-app-deploybucket-t9ahz4q34h6f/
