--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "react": "17.0.2",
     "react-chartjs-2": "3.0.4",
     "react-dom": "17.0.2",
+    "react-flexr": "^3.0.0-beta.2",
     "react-github-btn": "1.2.1",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
-    "react-table": "7.7.0",
+    "react-table": "^7.7.0",
     "stylis": "4.0.13",
     "stylis-plugin-rtl": "2.1.1",
     "web-vitals": "2.1.4",
